fixed dark mode style on 'Genres Page'

--- a/src/components/styles/BookOverview.css
+++ b/src/components/styles/BookOverview.css
@@ -13,7 +13,7 @@
   align-items: center;
   gap: 16px;
   margin-bottom: 40px;
-  border: 2px solid #eeeb;
+  border: 2px solid #eee7;
   background-color: #23232344;
 }
 
@@ -53,9 +53,10 @@
   > .cover-container
   > .cover {
   margin: 10px;
-  border: 5px solid #eee;
   width: 220px;
+  min-height: 300px;
   height: 100%;
+  border: 5px solid #eee;
   object-fit: cover;
   object-position: center;
 }
@@ -124,6 +125,7 @@
   > .info-container {
   padding: 10px;
   width: 100%;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
