--- a/src/components/styles/BookSearchItem.css
+++ b/src/components/styles/BookSearchItem.css
@@ -29,6 +29,7 @@
 }
 
 .list-container > .book-container > .left > .cover {
+  border: 2px solid #eee;
   height: 150px;
   width: 100px;
   object-fit: cover;
